--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,6 +1,38 @@
 html,
 body,
 #app {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
+}
+.flex {
+  display: flex;
+}
+.flex-1 {
+  flex: 1;
+}
+.justify-center {
+  justify-content: center;
+}
+.align-center {
+  align-items: center;
+}
+.justify-between {
+  justify-content: space-between;
+}
+
+/* // 高/行高 */
+
+.lh-40 {
+  line-height: 40px;
+}
+/* 外边距 */
+.ml-20 {
+  margin-left: 20px;
+}
+
+/* // 字体 */
+.fs-18 {
+  font-size: 18px;
 }
